# URGB-Controller

./: .replit  BUILD_WINDOWS_MSI.bat  MSI_BUILD_GUIDE.md  WINDOWS_REQUIREMENTS.txt  build_exe.py  build_msi.py  main.py  package_for_windows.bat  pyinstaller_msi.spec  pyproject.toml  replit.md  requirements_build.txt
.github/workflows/: build-msi.yml
config/: profiles.json  settings.json
installer/: License.rtf  Product.wxs  RGBControlCenter.wixproj
rgb_controllers/: asrock_controller.py  evofox_controller.py  lian_li_controller.py  openrgb_controller.py
utils/: color_utils.py  modern_theme.py  rgb_3d_interface.py
